<resources>
    <string name="app_name">AutoTimeCard</string>
    <string name="description">Automatically track your time on the
        job based on a clock-in location set by you</string>
    <string name="set_location">Set Clock In Location</string>
    <string name="see_time_history">See Time History</string>
    <string name="change_location">Change Clock In Location</string>
    <string name="background_image_description">Background Image</string>
    <string name="background_overlay_gray">Gray Background Overlay</string>
    <string name="title_activity_time_card">TimeCard</string>
    <string name="timeCard">Below is your time card history:</string>
    <string name="total_time">Total Time</string>
    <string name="time_out">Time Out</string>
    <string name="time_in">Time In</string>
    <string name="testingText">Testing Text</string>
</resources>
