<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="2">

        <TextView
            android:id="@+id/dayAndDateText"
            android:layout_column="0"
            android:layout_row="0"
            android:paddingBottom="@dimen/gridPaddingBottom"
            android:paddingEnd="@dimen/gridPaddingEnd"
            android:paddingStart="@dimen/gridPaddingStart"
            android:paddingTop="@dimen/gridPaddingTop"
            android:textSize="@dimen/gridTextSize"
            android:textColor="@color/b"
            tools:text="Monday, June 25" />

        <TextView
            android:id="@+id/timeInDescriptionText"
            android:layout_column="1"
            android:layout_row="0"
            android:paddingBottom="@dimen/gridPaddingBottom"
            android:paddingEnd="@dimen/gridPaddingEnd"
            android:paddingStart="@dimen/gridPaddingStart"
            android:paddingTop="@dimen/gridPaddingTop"
            android:text="@string/time_in" />

        <TextView
            android:id="@+id/timeOutDescriptionText"
            android:layout_column="2"
            android:layout_row="0"
            android:paddingBottom="@dimen/gridPaddingBottom"
            android:paddingEnd="@dimen/gridPaddingEnd"
            android:paddingStart="@dimen/gridPaddingStart"
            android:paddingTop="@dimen/gridPaddingTop"
            android:text="@string/time_out" />

        <TextView
            android:id="@+id/timeTotalDescriptionText"
            android:layout_column="3"
            android:layout_row="0"
            android:paddingBottom="@dimen/gridPaddingBottom"
            android:paddingEnd="@dimen/gridPaddingEnd"
            android:paddingStart="@dimen/gridPaddingStart"
            android:paddingTop="@dimen/gridPaddingTop"
            android:text="@string/total_time" />

        <TextView
            android:id="@+id/timeInText"
            android:layout_column="1"
            android:layout_row="1"
            android:paddingBottom="@dimen/gridPaddingBottom"
            android:paddingEnd="@dimen/gridPaddingEnd"
            android:paddingStart="@dimen/gridPaddingStart"
            android:paddingTop="@dimen/gridPaddingTop"
            tools:text="8:00AM" />

        <TextView
            android:id="@+id/timeOutText"
            android:layout_column="2"
            android:layout_row="1"
            android:paddingBottom="@dimen/gridPaddingBottom"
            android:paddingEnd="@dimen/gridPaddingEnd"
            android:paddingStart="@dimen/gridPaddingStart"
            android:paddingTop="@dimen/gridPaddingTop"
            tools:text="5:00PM" />

        <TextView
            android:id="@+id/timeTotalText"
            android:layout_column="3"
            android:layout_row="1"
            android:paddingBottom="@dimen/gridPaddingBottom"
            android:paddingEnd="@dimen/gridPaddingEnd"
            android:paddingStart="@dimen/gridPaddingStart"
            android:paddingTop="@dimen/gridPaddingTop"
            tools:text="4 hours" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>